# PELCA

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  LCA.py  README.md  config.py  environment.yaml  main.py  main_PELCA_GUI.py  main_PELCA_GUI.spec  plotting.py  pyproject.toml  requirements.txt  staircase.py  update_notes.md  version.txt
.github/workflows/: build-linux.yml  build-mac.yml  build.yml  ci.yml
Details/: Algorithm.md
Example/: Example.md  Input - Example.xlsx  exampleinput_PowermoduleAndCapacitor.xlsx  recover_data.py
Input/: Excel presentation.md  Input - Example.xlsx  Input - template.xlsx  exampleinput_PowermoduleAndCapacitor.xlsx
app/: main_window.py
app/models/: console.py  plot.py  plot_data.py
app/ressources/: ressources.qrc  ressources_rc.py
app/tests/: __init__.py  test_main_window.py
app/threads/: process_excel.py
app/utils/: LCA.py  __init__.py  dictionary.py  legacy.py  plotting.py  plotting_MC.py  staircase.py
app/widgets/: header.py  params.py  plot.py  script.py
app/widgets/plot_window/: controls.py  plot.py
archive/: main_PELCA_GUI.py  pelcaGUI.py  test-plot-qt.py
src/: LCA.py  dictionary.py  main_PELCA_GUI.py  pelcaGUI.py  plotting.py  staircase.py  test_dictionary.py  utils.py
tests/: test_init.py
