[tool.poetry]
name = "pelca"
version = "0.1.0"
description = ""
authors = ["Benjamin DUBUS"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
annotated-types = "0.7.0"
appdirs = "1.4.4"
asteval = "1.0.5"
astunparse = "1.6.3"
blinker = "1.8.2"
brightway2 = "2.4.6"
Brotli = "1.1.0"
bw-migrations = "0.2"
bw2analyzer = "0.10"
bw2calc = "1.8.2"
bw2data = "3.6.6"
bw2io = "0.8.12"
bw2parameters = "1.1.0"
certifi = "2024.8.30"
charset-normalizer = "3.3.2"
click = "8.1.7"
contourpy = "1.3.0"
cycler = "0.12.1"
docopt = "0.6.2"
ecoinvent_interface = "2.5"
eight = "1.0.1"
et-xmlfile = "1.1.0"
fasteners = "0.19"
Flask = "3.0.3"
flexcache = "0.3"
flexparser = "0.3.1"
fonttools = "4.54.1"
future = "0.18.3"
idna = "3.10"
importlib_metadata = "8.5.0"
importlib_resources = "6.4.5"
inflate64 = "1.0.0"
itsdangerous = "2.2.0"
Jinja2 = "3.1.4"
kiwisolver = "1.4.7"
lxml = "5.3.0"
MarkupSafe = "2.1.5"
matplotlib = "3.9.2"
mrio-common-metadata = "0.2.1"
multivolumefile = "0.2.3"
numpy = "1.26.4"
openpyxl = "3.1.5"
packaging = "24.1"
pandas = "2.2.3"
peewee = "3.17.6"
pillow = "10.4.0"
Pint = "0.24.3"
platformdirs = "4.3.6"
psutil = "6.0.0"
py7zr = "0.22.0"
pybcj = "1.0.2"
pycryptodomex = "3.21.0"
pydantic = "2.9.2"
pydantic-settings = "2.5.2"
pydantic_core = "2.23.4"
pyecospold = "4.0.0"
pyparsing = "3.1.4"
pyppmd = "1.1.0"
PyPrind = "2.11.3"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
pytz = "2024.2"
pyxlsb = "1.0.10"
pyzstd = "0.16.1"
requests = "2.32.3"
scipy = "1.13.1"
six = "1.16.0"
stats_arrays = "0.7"
tabulate = "0.9.0"
texttable = "1.7.0"
tqdm = "4.66.5"
typing_extensions = "4.12.2"
tzdata = "2024.2"
unicodecsv = "0.14.1"
Unidecode = "1.3.8"
urllib3 = "2.2.3"
voluptuous = "0.15.2"
Werkzeug = "3.0.4"
Whoosh = "2.7.4"
wrapt = "1.16.0"
xlrd = "2.0.1"
XlsxWriter = "3.2.0"
zipp = "3.20.2"
pytest = "8.3.3"
pylint = "^3.3.1"
black = "^24.10.0"
flake8 = "^7.1.1"
pyside6 = "^6.8.0.2"
pytest-qt = "^4.4.0"
plotly = "^5.24.1"
gitpython = "^3.1.43"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["app/tests/"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
